Fix up heading spacing

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -440,3 +440,25 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+/* BEGIN CHANGES JCP 12/15/2016 */
+h1,
+.h1
+{
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+h2,
+.h2
+ {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+h3,
+.h3 {
+  margin-top: 0px;
+  margin-bottom: 10px;
+}
+p {
+  margin-top: 0px;
+  margin-bottom: 20px;
+}
